Fix for misalignment on subscribe box

--- a/sites/all/themes/atwork_zen/sass/atwork_zen.styles.scss
+++ b/sites/all/themes/atwork_zen/sass/atwork_zen.styles.scss
@@ -1922,6 +1922,9 @@ aside.sidebars h2 {
   color: #26669E;
   margin-right: 5px;
 }
+form#subscriptions-ui-node-form {
+  clear:both;
+}
 #subscribe.form-wrapper {
   clear: both;
   padding-top: 15px;
